--- a/packages/react-native-remotely/package.json
+++ b/packages/react-native-remotely/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "react-native-remotely",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "react-native-remotely",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.ts",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "peerDependencies": {
+        "react": "19.1.0",
+        "react-dom": "19.1.0",
+        "react-native": "0.81.5"
+    },
+    "dependencies": {
+        "@types/react": "~19.1.0"
+    }
 }
