--- a/packages/react-native-remkit/package.json
+++ b/packages/react-native-remkit/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-native-remotely",
+    "name": "@remkit/react-native",
     "version": "1.0.0",
     "description": "",
     "main": "index.ts",
