--- a/packages/react-native-remkit/package.json
+++ b/packages/react-native-remkit/package.json
@@ -8,7 +8,7 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
+    "license": "MIT",
     "peerDependencies": {
         "react": "19.1.0",
         "react-dom": "19.1.0",
