--- a/packages/react-native-remkit/tsconfig.json
+++ b/packages/react-native-remkit/tsconfig.json
@@ -8,12 +8,14 @@
         "allowSyntheticDefaultImports": true,
 
         /* Bundler mode */
-        "moduleResolution": "bundler",
-        "allowImportingTsExtensions": true,
+        "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "noEmit": true,
+        "noEmit": false,
         "jsx": "react-jsx",
+        "declaration": true,
+        "outDir": "./dist",
+        "rootDir": ".",
 
         /* Linting */
         "strict": true,
@@ -26,9 +28,6 @@
             "@/*": ["./src/*"]
         }
     },
-    "include": [
-        "**/*.ts",
-        "**/*.tsx",
-        "global.d.ts"
-    ]
+    "include": ["**/*.ts", "**/*.tsx", "global.d.ts"],
+    "exclude": ["node_modules", "dist"]
 }
